Add API support for custom groups (#155)
With this commit we store custom groups metrics in dgraph and
provide an API endpoint for retrieving these metrics.
